feat: custom item with texture and behaviour

--- a/src/main/resources/assets/minecraft-academy/lang/en_us.json
+++ b/src/main/resources/assets/minecraft-academy/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.minecraft-academy.some_item": "Some Item"
+  "item.minecraft-academy.some_item": "Some Item",
+  "item.minecraft-academy.magic_stick": "Magick Stick"
 }
