--- a/src/main/resources/assets/minecraft-academy/lang/en_us.json
+++ b/src/main/resources/assets/minecraft-academy/lang/en_us.json
@@ -1,6 +1,10 @@
 {
   "item.minecraft-academy.some_item": "Some Item",
   "item.minecraft-academy.magic_stick": "Magick Stick",
+  "item.minecraft-academy.training_book": "Training Book",
   "item.minecraft-academy.robot_spawn_egg": "Robot Spawn Egg",
+  "block.minecraft-academy.robot_spawn_block": "Robot Spawn",
+  "block.minecraft-academy.robot_finish_block": "Robot Finish",
+  "block.minecraft-academy.robot_interest_block": "Robot Interest",
   "entity.minecraft-academy.robot": "Robot"
 }
